fix: locate issue

--- a/example/index.html
+++ b/example/index.html
@@ -40,7 +40,7 @@
 
     <script type="module">
     const { createApp, ref } = Vue
-    import Swisseph from '/src/swisseph.js';
+    import Swisseph from "../src/swisseph.js";
 
     createApp({
         setup() {
