docs: added licensing info

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -507,6 +507,15 @@
             <p>Powered by Swiss Ephemeris WebAssembly |
                <a href="https://github.com/prolaxu/swisseph-wasm" class="text-blue-500 hover:underline">View on GitHub</a>
             </p>
+            <div class="mt-4 p-4 bg-gray-50 rounded-lg text-sm">
+                <p class="font-semibold text-gray-700 mb-2">📜 Licensing Information</p>
+                <p class="text-gray-600">
+                    This demo uses Swiss Ephemeris under GPL license.
+                    <strong>Commercial applications</strong> may require a commercial license from
+                    <a href="https://www.astro.com/swisseph/" target="_blank" class="text-blue-500 hover:underline">Astrodienst AG</a>.
+                    See our <a href="https://github.com/prolaxu/swisseph-wasm#-license--important-legal-information" target="_blank" class="text-blue-500 hover:underline">licensing guide</a> for details.
+                </p>
+            </div>
         </footer>
     </div>
 
