--- a/examples/demo.html
+++ b/examples/demo.html
@@ -503,18 +503,22 @@
         </div>
 
         <!-- Footer -->
-        <footer class="mt-12 text-center text-gray-500">
-            <p>Powered by Swiss Ephemeris WebAssembly |
-               <a href="https://github.com/prolaxu/swisseph-wasm" class="text-blue-500 hover:underline">View on GitHub</a>
-            </p>
-            <div class="mt-4 p-4 bg-gray-50 rounded-lg text-sm">
-                <p class="font-semibold text-gray-700 mb-2">📜 Licensing Information</p>
-                <p class="text-gray-600">
-                    This demo uses Swiss Ephemeris under GPL license.
-                    <strong>Commercial applications</strong> may require a commercial license from
-                    <a href="https://www.astro.com/swisseph/" target="_blank" class="text-blue-500 hover:underline">Astrodienst AG</a>.
-                    See our <a href="https://github.com/prolaxu/swisseph-wasm#-license--important-legal-information" target="_blank" class="text-blue-500 hover:underline">licensing guide</a> for details.
+        <footer class="mt-12 text-center">
+            <!-- Main Footer -->
+            <div class="text-gray-500 mb-6">
+                <p class="mb-2">⚡ Powered by Swiss Ephemeris WebAssembly |
+                   <a href="https://github.com/prolaxu/swisseph-wasm" class="text-blue-500 hover:underline">Open Source</a>
                 </p>
+                <p class="text-sm">🇳🇵 Built with ❤️ by Laxman Adhikari from Nepal</p>
+            </div>
+            <!-- Bottom Links -->
+            <div class="text-xs text-gray-400 border-t border-gray-200 pt-4">
+                <p>
+                    <a href="https://github.com/prolaxu/swisseph-wasm" class="hover:text-blue-500">Documentation</a> •
+                    <a href="https://github.com/prolaxu/swisseph-wasm/issues" class="hover:text-blue-500">Report Issues</a> •
+                    <a href="https://www.astro.com/swisseph/" class="hover:text-blue-500">Swiss Ephemeris</a>
+                </p>
+                <p class="mt-1">© 2024 SwissEph WebAssembly • Made with passion for the astrology community</p>
             </div>
         </footer>
     </div>
