--- a/examples/demo.html
+++ b/examples/demo.html
@@ -511,6 +511,16 @@
                 </p>
                 <p class="text-sm">🇳🇵 Built with ❤️ by Laxman Adhikari from Nepal</p>
             </div>
+
+            <!-- Support Section -->
+            <div class="mb-4">
+                <p class="text-sm text-gray-600 mb-2">
+                    ☕ Enjoying this free tool?
+                    <a href="https://ko-fi.com/prolaxu" target="_blank"
+                       class="text-blue-500 hover:text-blue-600 font-medium">Support on Ko-fi</a>
+                </p>
+            </div>
+
             <!-- Bottom Links -->
             <div class="text-xs text-gray-400 border-t border-gray-200 pt-4">
                 <p>
